...
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/collapsedTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0"
                    android:ellipsize="end"
                    android:includeFontPadding="false"
                    android:maxLines="1"
...
                android:contentDescription="@string/action_reservation_help"
                android:padding="12dp"
                android:src="@drawable/ic_help_outline"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/topBarSongSearch"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/action_song_search"
                android:padding="10dp"
                android:src="@drawable/ic_search"
...
            <FrameLayout
                android:id="@+id/topBarReservationsContainer"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:visibility="gone">
                <ImageButton
                    android:id="@+id/topBarReservations"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/action_reservations"
                    android:padding="10dp"
                    android:src="@drawable/ic_reservation_ticket"
...

            <FrameLayout
                android:id="@+id/topBarAnnouncementContainer"
                android:layout_width="44dp"
                android:layout_height="44dp">
                <ImageButton
                    android:id="@+id/topBarAnnouncement"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/action_announcements"
                    android:padding="10dp"
                    android:src="@drawable/ic_notifications"
...
